--- a/freva/01-secrets.yaml
+++ b/freva/01-secrets.yaml
@@ -7,11 +7,11 @@ metadata:
 type: Opaque
 stringData:
   MYSQL_ROOT_PASSWORD: "Not2Secret!"
-  MYSQL_PASSWORD: "1mX97G8hl6vRb9lMcoOa2QrNRvgHS6"
-  REDIS_USERNAME: "gimpy-chestnut-scorpion"
-  REDIS_PASSWORD: "QI4et01gA8lptsqTk4X70dXRC94U3C"
+  MYSQL_PASSWORD: "4iIf1TP6E4QBUYfoZR5C02YTZ7slCC"
+  REDIS_USERNAME: "lumpy-gamboge-dogfish"
+  REDIS_PASSWORD: "NLjFV7YD01rLsLwK62PNw9D87RVo89"
   OIDC_CLIENT_SECRET: ""
-  FREVA_REST_DB_USER: "pasty-emerald-fox"
-  FREVA_REST_DB_PASSWORD: "d16qz9tzG3l7X7jN8DhnvYGQ8v5wx1"
-  MONGO_APP_USER: "pasty-emerald-fox"
-  MONGO_APP_PASSWORD: "d16qz9tzG3l7X7jN8DhnvYGQ8v5wx1"
+  FREVA_REST_DB_USER: "snoopy-orchid-molly"
+  FREVA_REST_DB_PASSWORD: "rk9vzFYzs8gtgp19NH7kQI18Ks815c"
+  MONGO_APP_USER: "snoopy-orchid-molly"
+  MONGO_APP_PASSWORD: "rk9vzFYzs8gtgp19NH7kQI18Ks815c"
