--- a/freva/12-monog.yaml
+++ b/freva/12-monog.yaml
@@ -1,7 +1,19 @@
 ---
 apiVersion: v1
 kind: Service
-metadata: { name: mongo-server, namespace: freva }
+metadata:
+  name: mongo-server
+  namespace: freva
+  labels:
+    app: freva-mongo-server
+    app.kubernetes.io/name: freva
+    app.kubernetes.io/instance: mongo-server
+    app.kubernetes.io/component: rest-api
+    app.kubernetes.io/part-of: freva
+    app.kubernetes.io/version: 6.0.16
+    app.kubernetes.io/managed-by: ansible
+    freva.org/stateful: true
+    freva.org/tier: database
 spec:
   type: ClusterIP
   selector: { app: mongo-server }
@@ -9,13 +21,37 @@ spec:
 ---
 apiVersion: apps/v1
 kind: StatefulSet
-metadata: { name: mongo-server, namespace: freva }
+metadata:
+  name: mongo-server
+  namespace: freva
+  labels:
+    app: freva-mongo-server
+    app.kubernetes.io/name: freva
+    app.kubernetes.io/instance: mongo-server
+    app.kubernetes.io/component: rest-api
+    app.kubernetes.io/part-of: freva
+    app.kubernetes.io/version: 6.0.16
+    app.kubernetes.io/managed-by: ansible
+    freva.org/stateful: true
+    freva.org/tier: database
 spec:
   serviceName: mongo-server
   replicas: 1
   selector: { matchLabels: { app: mongo-server } }
   template:
-    metadata: { labels: { app: mongo-server } }
+    metadata:
+      name: mongo-server
+      namespace: freva
+      labels:
+        app: freva-mongo-server
+        app.kubernetes.io/name: freva
+        app.kubernetes.io/instance: mongo-server
+        app.kubernetes.io/component: rest-api
+        app.kubernetes.io/part-of: freva
+        app.kubernetes.io/version: 6.0.16
+        app.kubernetes.io/managed-by: ansible
+        freva.org/stateful: true
+        freva.org/tier: database
     spec:
       securityContext: { fsGroup: 0 }
       containers:
