--- a/freva/12-solr.yaml
+++ b/freva/12-solr.yaml
@@ -1,7 +1,20 @@
 ---
 apiVersion: v1
 kind: Service
-metadata: { name: search-server, namespace: freva }
+metadata:
+  name: search-server
+  namespace: freva
+  labels:
+    app: freva-search-server
+    app.kubernetes.io/name: freva
+    app.kubernetes.io/instance: search-server
+    app.kubernetes.io/component: backend
+    app.kubernetes.io/part-of: freva
+    app.kubernetes.io/version: 9.9.0
+    app.kubernetes.io/managed-by: ansible
+    freva.org/stateful: true
+    freva.org/tier: database
+
 spec:
   type: ClusterIP
   selector: { app: search-server }
@@ -9,13 +22,37 @@ spec:
 ---
 apiVersion: apps/v1
 kind: StatefulSet
-metadata: { name: search-server, namespace: freva }
+metadata:
+  name: search-server
+  namespace: freva
+  labels:
+    app: freva-search-server
+    app.kubernetes.io/name: freva
+    app.kubernetes.io/instance: search-server
+    app.kubernetes.io/component: backend
+    app.kubernetes.io/part-of: freva
+    app.kubernetes.io/version: 9.9.0
+    app.kubernetes.io/managed-by: ansible
+    freva.org/stateful: true
+    freva.org/tier: database
 spec:
   serviceName: search-server
   replicas: 1
   selector: { matchLabels: { app: search-server } }
   template:
-    metadata: { labels: { app: search-server } }
+    metadata:
+      name: search-server
+      namespace: freva
+      labels:
+        app: freva-search-server
+        app.kubernetes.io/name: freva
+        app.kubernetes.io/instance: search-server
+        app.kubernetes.io/component: backend
+        app.kubernetes.io/part-of: freva
+        app.kubernetes.io/version: 9.9.0
+        app.kubernetes.io/managed-by: ansible
+        freva.org/stateful: true
+        freva.org/tier: database
     spec:
       securityContext: { fsGroup: 0 }
       containers:
