--- a/freva/20-rest.yaml
+++ b/freva/20-rest.yaml
@@ -1,7 +1,19 @@
 ---
 apiVersion: v1
 kind: Service
-metadata: { name: freva-rest-server, namespace: freva }
+metadata:
+  name: freva-rest-server
+  namespace: freva
+  labels:
+    app: freva-freva-rest-server
+    app.kubernetes.io/name: freva
+    app.kubernetes.io/instance: freva-rest-server
+    app.kubernetes.io/component: rest-api
+    app.kubernetes.io/part-of: freva
+    app.kubernetes.io/version: 2510.0.0
+    app.kubernetes.io/managed-by: ansible
+    freva.org/stateful: true
+    freva.org/tier: backend
 spec:
   type: ClusterIP
   selector: { app: freva-rest-server }
@@ -9,12 +21,36 @@ spec:
 ---
 apiVersion: apps/v1
 kind: Deployment
-metadata: { name: freva-rest-server, namespace: freva }
+metadata:
+  name: freva-rest-server
+  namespace: freva
+  labels:
+    app: freva-freva-rest-server
+    app.kubernetes.io/name: freva
+    app.kubernetes.io/instance: freva-rest-server
+    app.kubernetes.io/component: rest-api
+    app.kubernetes.io/part-of: freva
+    app.kubernetes.io/version: 2510.0.0
+    app.kubernetes.io/managed-by: ansible
+    freva.org/stateful: true
+    freva.org/tier: backend
 spec:
   replicas: 1
   selector: { matchLabels: { app: freva-rest-server } }
   template:
-    metadata: { labels: { app: freva-rest-server } }
+    metadata:
+      name: freva-rest-server
+      namespace: freva
+      labels:
+        app: freva-freva-rest-server
+        app.kubernetes.io/name: freva
+        app.kubernetes.io/instance: freva-rest-server
+        app.kubernetes.io/component: rest-api
+        app.kubernetes.io/part-of: freva
+        app.kubernetes.io/version: 2510.0.0
+        app.kubernetes.io/managed-by: ansible
+        freva.org/stateful: true
+        freva.org/tier: backend
     spec:
       securityContext: { fsGroup: 0 }
       containers:
