--- a/freva/10-mysql.yaml
+++ b/freva/10-mysql.yaml
@@ -5,19 +5,24 @@ metadata:
   name: database-server
   namespace: freva
   labels:
-    app: freva-database-server
+    app: database-server
     app.kubernetes.io/name: freva
     app.kubernetes.io/instance: database-server
     app.kubernetes.io/component: web-app
     app.kubernetes.io/part-of: freva
     app.kubernetes.io/version: 9.3.0
     app.kubernetes.io/managed-by: ansible
-    freva.org/stateful: true
+    freva.org/stateful: 'true'
     freva.org/tier: database
 spec:
   type: ClusterIP
-  selector: { app: database-server }
-  ports: [{ port: 3306, targetPort: 3306, name: mysql }]
+  selector:
+    app: database-server
+  ports:
+    - port: 3306
+      targetPort: 3306
+      name: mysql
+
 ---
 apiVersion: apps/v1
 kind: StatefulSet
@@ -25,14 +30,14 @@ metadata:
   name: database-server
   namespace: freva
   labels:
-    app: freva-database-server
+    app: database-server
     app.kubernetes.io/name: freva
     app.kubernetes.io/instance: database-server
     app.kubernetes.io/component: web-app
     app.kubernetes.io/part-of: freva
     app.kubernetes.io/version: 9.3.0
     app.kubernetes.io/managed-by: ansible
-    freva.org/stateful: true
+    freva.org/stateful: 'true'
     freva.org/tier: database
 spec:
   serviceName: database-server
@@ -43,14 +48,14 @@ spec:
       name: database-server
       namespace: freva
       labels:
-        app: freva-database-server
+        app: database-server
         app.kubernetes.io/name: freva
         app.kubernetes.io/instance: database-server
         app.kubernetes.io/component: web-app
         app.kubernetes.io/part-of: freva
         app.kubernetes.io/version: 9.3.0
         app.kubernetes.io/managed-by: ansible
-        freva.org/stateful: true
+        freva.org/stateful: 'true'
         freva.org/tier: database
     spec:
       securityContext: { fsGroup: 0 }
@@ -59,6 +64,7 @@ spec:
           image: ghcr.io/freva-org/freva-mysql:9.3.0
           imagePullPolicy: IfNotPresent
           ports: [{ containerPort: 3306, name: mysql }]
+          resources: {'limits': {'cpu': '2', 'memory': '4Gi'}, 'requests': {'cpu': '500m', 'memory': '2Gi'}}
           env:
             - name: ROOT_PW
               valueFrom: { secretKeyRef: { name: freva-secrets, key: MYSQL_ROOT_PASSWORD } }
@@ -68,15 +74,10 @@ spec:
             - name: MYSQL_PASSWORD
               valueFrom: { secretKeyRef: { name: freva-secrets, key: MYSQL_PASSWORD } }
             - { name: MYSQL_DATABASE, value: "frevadb" }
-            - { name: HOST, value: "localhost" }
+            - { name: HOST, value: "freva-db.k8s.ucar.edu" }
             - { name: PROJECT, value: "freva" }
           volumeMounts:
             - { name: db-data, mountPath: /data/db }
-            - { name: db-logs, mountPath: /data/logs }
-          readinessProbe: { tcpSocket: { port: 3306 }, initialDelaySeconds: 5, periodSeconds: 5 }
-          livenessProbe:  { tcpSocket: { port: 3306 }, initialDelaySeconds: 10, periodSeconds: 10 }
       volumes:
         - name: db-data
           persistentVolumeClaim: { claimName: db-data }
-        - name: db-logs
-          persistentVolumeClaim: { claimName: db-logs }
