--- a/freva/12-solr.yaml
+++ b/freva/12-solr.yaml
@@ -5,14 +5,14 @@ metadata:
   name: search-server
   namespace: freva
   labels:
-    app: freva-search-server
+    app: search-server
     app.kubernetes.io/name: freva
     app.kubernetes.io/instance: search-server
     app.kubernetes.io/component: backend
     app.kubernetes.io/part-of: freva
-    app.kubernetes.io/version: 9.9.0
+    app.kubernetes.io/version: 9.10.0
     app.kubernetes.io/managed-by: ansible
-    freva.org/stateful: true
+    freva.org/stateful: 'true'
     freva.org/tier: database
 
 spec:
@@ -26,14 +26,14 @@ metadata:
   name: search-server
   namespace: freva
   labels:
-    app: freva-search-server
+    app: search-server
     app.kubernetes.io/name: freva
     app.kubernetes.io/instance: search-server
     app.kubernetes.io/component: backend
     app.kubernetes.io/part-of: freva
-    app.kubernetes.io/version: 9.9.0
+    app.kubernetes.io/version: 9.10.0
     app.kubernetes.io/managed-by: ansible
-    freva.org/stateful: true
+    freva.org/stateful: 'true'
     freva.org/tier: database
 spec:
   serviceName: search-server
@@ -44,30 +44,28 @@ spec:
       name: search-server
       namespace: freva
       labels:
-        app: freva-search-server
+        app: search-server
         app.kubernetes.io/name: freva
         app.kubernetes.io/instance: search-server
         app.kubernetes.io/component: backend
         app.kubernetes.io/part-of: freva
-        app.kubernetes.io/version: 9.9.0
+        app.kubernetes.io/version: 9.10.0
         app.kubernetes.io/managed-by: ansible
-        freva.org/stateful: true
+        freva.org/stateful: 'true'
         freva.org/tier: database
     spec:
       securityContext: { fsGroup: 0 }
       containers:
         - name: solr
-          image: ghcr.io/freva-org/freva-solr:9.9.0
+          image: ghcr.io/freva-org/freva-solr:9.10.0
           imagePullPolicy: IfNotPresent
           ports: [{ containerPort: 8983, name: http }]
+          resources: {'limits': {'cpu': '4', 'memory': '16Gi'}, 'requests': {'cpu': '1500m', 'memory': '8Gi'}}
           env:
             - { name: API_SOLR_PORT, value: "8983" }
             - { name: API_SOLR_HEAP, value: "4g" }
           volumeMounts:
             - { name: solr-data, mountPath: /data/db }
-            - { name: solr-logs, mountPath: /data/logs }
       volumes:
         - name: solr-data
           persistentVolumeClaim: { claimName: solr-data }
-        - name: solr-logs
-          persistentVolumeClaim: { claimName: solr-logs }
